--- a/TFG-SmarthomeAPP/app/src/main/res/layout/activity_login.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,24 @@
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_marginTop="50dp"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="upv.locamo.tfg.smarthome.app.LoginActivity">
+
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:id="@+id/email_login_form"
+            android:layout_marginTop="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
@@ -73,6 +87,9 @@
             android:layout_gravity="center"
             style="@style/btnStyleSeagull"
             android:text="@string/register"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
 
