--- a/TFG-SmarthomeAPP/app/src/main/res/layout/activity_main.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,23 @@
 
     <TextView
         android:id="@+id/tv_ip"
-        android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn_getResource"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        style="@style/btnStyleSeagull"
+        android:text="@string/register"/>
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_alignParentTop="false" />
 
 </RelativeLayout>
