--- a/TFG-SmarthomeAPP/app/src/main/res/menu/main.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/menu/main.xml
@@ -7,4 +7,8 @@
         android:title="@string/about"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/logout"
+        android:title="@string/logout"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
