--- a/TFG-SmarthomeAPP/app/src/main/res/menu/shopping_list.xml
+++ b/TFG-SmarthomeAPP/app/src/main/res/menu/shopping_list.xml
@@ -1,18 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="upv.locamo.tfg.smarthome.app.MainActivity" >
-    
+    tools:context="upv.locamo.tfg.smarthome.app.ShoppingListActivity" >
+
     <item android:id="@+id/about"
         android:title="@string/about"
         android:orderInCategory="100"
         app:showAsAction="never" />
     <item android:id="@+id/logout"
         android:title="@string/logout"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item android:id="@+id/shoppingList"
-        android:title="@string/shoppingList"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
